--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pylint = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
+click = "*"
 
 [requires]
 python_version = "3.7"
